2009-09-15  Kouichirou Eto  <2009@eto.com.nospam.com>

	* lib/qwik/group-db.rb: Delete add method.
	* lib/qwik/act-site.rb: Fix a test case.
	* lib/qwik/site-search.rb: Fix a test case.

2009-09-09  Kouichirou Eto  <2009@eto.com.nospam.com>

	* lib/qwik/act-search.rb: Refactoring.
	* lib/qwik/site-search.rb: Ditto.
	* lib/qwik/db-searchword.rb: Ditto.

	* lib/qwik/act-isearch.rb: Splited.
	* lib/qwik/act-searchwords.rb: Ditto.
	* lib/qwik/act-search.rb: Ditto.

	* lib/qwik/act-search.rb: Bring back search function.
	* lib/qwik/site-search.rb: Ditto.

	* lib/qwik/act-site.rb: New file.

	* lib/qwik/act-site.rb: Show site status.
	* lib/qwik/site-config.rb: New method blessed.
	* lib/qwik/site-group.rb: New two methods.
	* lib/qwik/site-config.rb: Delete old SiteConfig spec.
	* lib/qwik/site-config.rb: Do not cache siteconfig.

2009-09-08  Kouichirou Eto  <2009@eto.com.nospam.com>

	* lib/qwik/act-pagelist.rb: Fix bug.

2009-09-04  Kouichirou Eto  <2009@eto.com.nospam.com>

	* lib/qwik/act-archive.rb: Use Thread.
	* lib/qwik/act-archive.rb: Delete flag related methods.

	* lib/qwik/act-pagelist.rb: Use Thread for page list.

2009-09-03  Kouichirou Eto  <2009@eto.com.nospam.com>

	* lib/qwik/act-metadata.rb: Cache feed file.

	* lib/qwik/action.rb: New method site_updated. This method is
	called when the site is updated.
	* lib/qwik/act-new.rb: Ditto.
	* lib/qwik/act-save.rb: Ditto.

	* lib/qwik/act-mdlb.rb: Delete unused function.

	* lib/qwik/response.rb: Fix ico mimetype.

	* lib/qwik/act-theme.rb: Add favicon.ico support.

	* lib/qwik/farm.rb: Do not use each method.
	* lib/qwik/site-report.rb: Ditto.

	* lib/qwik/db-filesystem.rb: Do not use Enumerable.
	* lib/qwik/pages.rb: New method list.

	* lib/qwik/pages.rb: New method title_list_keys and date_list_keys.

	* lib/qwik/pages.rb: Do not cache Page objects.
	* lib/qwik/pages.rb: Clear unused code.

	* lib/qwik/page-title.rb: Disable unused PageTitle function.
	* lib/qwik/page-title.rb: Delete the code.